 * Configuration simplification (#1182)
 * FreeRADIUS package now does the certificate boostrapping process (#1226)
 * Named isolation and registration zones now automatically generated on startup
   based on networks.conf's DNS entry (#1105)
 * Simplified Apache configuration
 * Included the jpgraph PHP library. Simplifies installation from source.
 * More start-up validation in `pfcmd checkup`
 * More tests

Bug fixes
 * Fixes issues with accentuated characters and single quotes in some captive
   portal strings
 * Cisco C3560 now heritates the Cisco C2960 code
 * Additional fixes to nessus scans
 * Renaming Nortel ERS modules (#1238)
 * Interim fixes (#1239, #1240)

--------------------------------------------------------------------------------
Version <version> released on <releaseDate>

New Hardware Support
 * Avaya/Nortel switches now support the floating network device feature
 * Dlink DWL Access-Point support
 * LG-Ericsson iPecs 4500 support for MAC Authentication/802.1X

New Features
 * Ability to view log files from the Web Administration interface (#1080)

Enhancements
 * Added ldap port option to Web Admin LDAP (AD) authentication
 * New DHCP fingerprints for Aastra, LifeSize, Nortel, Polycom and Snom 
   Conferencing and VoIP, Ubuntu 11.04 and a Xerox printer
 * New controllerIp network device parameter will make it simpler to support
   wireless hardware working in bridged mode
 * Developer documentation to add Floating Network Devices support to switches
 * Minor usability improvements

Bug fixes
 * Fixed OS violations regression introduced in 2.2.0
 * Fixed Avaya/Nortel switches problems on ERS2500 / ERS4500 (at least)
 * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
 * Fixed custom VLAN assignments relying on connection_type failing on "unknown"
   nodes (#1231)
 * Fixed problematic default grace period for System scan violation
 * Fixed configurator.pl does not show interfaces without IP address (#1221)