@@ -388,7 +388,7 @@ if ($getUpLinks) {
                     print ", " . ( $$oui_info[0] || 'unknown' );
                 }
                 if ($showPF) {
-                    my @pfcmd = `$bin_dir/pfcmd node view $mac`;
+                    my @pfcmd = pf_run("$bin_dir/pfcmd node view $mac");
                     @pfcmd = split( /[|]/, $pfcmd[1] );
                     print ", $pfcmd[7]" unless ( $pfcmd[7] eq '' );
                     print ", $pfcmd[1]" unless ( $pfcmd[1] eq '' );
@@ -492,7 +492,7 @@ if ($getUpLinks) {
                     print ", " . ( $$oui_info[0] || 'unknown' );
                 }
                 if ($showPF) {
-                    my @pfcmd = `$bin_dir/pfcmd node view $currentMac`;
+                    my @pfcmd = pf_run("$bin_dir/pfcmd node view $currentMac");
                     @pfcmd = split( /[|]/, $pfcmd[1] );
                     print ", $pfcmd[8]" unless ( $pfcmd[8] eq '' );
                     print ", $pfcmd[1]" unless ( $pfcmd[1] eq '' );
