@@ -32,6 +32,7 @@ use warnings;
 use diagnostics;
 
 use base ('pf::SNMP');
+
 use POSIX;
 use Log::Log4perl;
 use Net::Telnet;
@@ -186,7 +187,7 @@ sub _dot1xDeauthenticateMAC {
 
     my $cmd = "aaa user delete mac $mac";
 
-    $logger->info("deauthenticating 802.1x $mac with `$cmd`");
+    $logger->info("deauthenticating 802.1x $mac with: $cmd");
     $session->cmd($cmd);
 
     $session->close();
@@ -236,7 +237,7 @@ sub _deauthenticateMAC {
                     my $apSSID = uc("$1:$2:$3:$4:$5:$6");
                     my $cmd = "stm kick-off-sta $mac $apSSID";
 
-                    $logger->info("deauthenticating $mac from SSID $apSSID with `$cmd`");
+                    $logger->info("deauthenticating $mac from SSID $apSSID with: $cmd");
                     $session->cmd($cmd);
                     $count++;
                 } else {
