@@ -272,9 +272,9 @@ sub manage_Static_Route {
             my $cmd = "$full_path $add_del -net $network netmask " . $net{'netmask'} . " gw " . $net{'next_hop'};
             my( $success, $error_code, $full_buf, $stdout_buf, $stderr_buf ) = run( command => $cmd, verbose => 0 );
             if( $success ) {
-                $logger->debug("static route command `$cmd` succedeed!");
+                $logger->debug("static route successfully added!");
             } else {
-                $logger->error("static route command `$cmd` failed!");
+                $logger->error("static route injection failed: $cmd");
             }
         }
     }
